<resources>
    <string name="app_name">CoronaTiem</string>
    <string name="search_country">Search Country</string>
    <string name="india_under_corona">India under Corona</string>
    <string name="confirmed">Confirmed :</string>
    <string name="recovered">Recovered :</string>
    <string name="deaths">Deaths :</string>
    <string name="state_wise">State Wise :</string>
    <string name="latest_till">Latest Till :</string>
    <string name="enter_city_or_state">Enter city or state</string>
    <string name="state_wise_tally">State Wise Tally :</string>
    <string name="india_totals">India Totals</string>
    <string name="new_cases_today">New Cases Today</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
